--- a/index.html
+++ b/index.html
@@ -4,27 +4,147 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип">
+      <h1 class="header__title">Научится учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Тут должно быть изображение заголовка">
+      <div class="header__square-pic"></div>  
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <ul class="two-columns__main-text">
+            <li class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</li>
+            <li class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</li>
+            <li class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</li>
+          </ul>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекс</p>
+          </li>
+        </ul>
       </section>
 
-      <section class="feinman">
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link">Подробнее &rarr;</a>
       </section>
-
+      
       <section class="kaufman">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table_theme_dark">
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">1</h4>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">2</h4>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">3</h4>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">4</h4>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">5</h4>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">6</h4>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">7</h4>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">8</h4>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">9</h4>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">10</h4>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Здесь должна быть картинка">
       </section>
     </main>
     <footer class="footer">
-
+      <ul class="footer__columns">
+        <li class="footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
+          <p class="author">&copy; 2020, Анастасия Циберная</p>
+        </li>
+        <li class="footer__column_content_info">
+          <h2 class="footer__column_heading">О Практикуме</h2>
+          <nav class="footer__column_links">
+            <a>Главная</a>
+            <a>Концепция</a>
+            <a>Наставники</a>
+          </nav>
+        </li>
+        <li class="footer__column_content_info">
+          <h2 class="footer__column_heading">Соцсети</h2>
+          <nav class="footer__column_links">
+            <a><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
+            <a><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
+            <a><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
+          </nav>
+        </li>
+      </ul>
     </footer>
   </div>
 </body>
