HTML и CSS главной страницы

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         <li class="footer__column_content_info">
           <h2 class="footer__column_heading">Соцсети</h2>
           <nav class="footer__column_links">
-            <a><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
-            <a><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
-            <a><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
+            <a href="#"><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
+            <a href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
+            <a href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
           </nav>
         </li>
       </ul>
