HTML и CSS главной страницы

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <h2 class="footer__column_heading">О Практикуме</h2>
           <ul class="footer__column_links">
             <li><a>Главная</a></li>
-            <li<a>Концепция</a></li>
+            <li><a>Концепция</a></li>
             <li><a>Наставники</a></li>
           </ul>
         </li>
