HTML и CSS главной страницы. Отработка замечаний

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -127,24 +127,36 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
-          <p class="author">&copy; 2020, Анастасия Циберная</p>
+          <p class="footer__author">&copy; 2020, Анастасия Циберная</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <nav class="footer__column-links">
-            <a class="footer_column-link" href="#">Главная</a>
-            <a class="footer_column-link" href="#">Концепция</a>
-            <a class="footer_column-link" href="#">Наставники</a>
-          </nav>
+          <li class="footer__column-links">
+            <ul class="footer__column-item">
+              <a class="footer__column-link" href="#">Главная</a>
+            </ul>
+            <ul class="footer__column-item">
+              <a class="footer__column-link" href="#">Концепция</a>
+            </ul>
+            <ul class="footer__column-item">
+              <a class="footer__column-link" href="#">Наставники</a>
+            </ul>
+          </li>
         </div>
-        <div class="footer__column footer__column_content_info">
-          <h2 class="footer__column-heading">Соцсети</h2>
-          <nav class="footer__column-links">
-            <a class="footer_column-link" href="#"><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
-            <a class="footer_column-link" href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
-            <a class="footer_column-link" href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
-          </nav>
-        </div>
+        <nav class="footer__column footer__column_content_info">
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <li class="footer__column-links">
+              <ul class="footer__column-item">
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
+              </ul>
+              <ul class="footer__column-item">
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
+              </ul>
+              <ul class="footer__column-item">
+                <a class="footer__column-link"href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
+              </ul>
+            </li>
+        </nav>
       </div>
     </footer>
   </div>
