HTML и CSS главной страницы. Отработка замечаний

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
           <p class="footer__author">&copy; 2020, Анастасия Циберная</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <li class="footer__column-links">
             <ul class="footer__column-item">
@@ -142,7 +142,7 @@
               <a class="footer__column-link" href="#">Наставники</a>
             </ul>
           </li>
-        </div>
+        </nav>
         <nav class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">Соцсети</h2>
             <li class="footer__column-links">
@@ -153,7 +153,7 @@
                 <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
               </ul>
               <ul class="footer__column-item">
-                <a class="footer__column-link"href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
               </ul>
             </li>
         </nav>
