--- a/index.html
+++ b/index.html
@@ -131,31 +131,31 @@
         </div>
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <li class="footer__column-links">
-            <ul class="footer__column-item">
+          <ul class="footer__column-links">
+            <li class="footer__column-item">
               <a class="footer__column-link" href="#">Главная</a>
-            </ul>
-            <ul class="footer__column-item">
-              <a class="footer__column-link" href="#">Концепция</a>
-            </ul>
-            <ul class="footer__column-item">
-              <a class="footer__column-link" href="#">Наставники</a>
-            </ul>
-          </li>
-        </nav>
-        <nav class="footer__column footer__column_content_info">
-            <h2 class="footer__column-heading">Соцсети</h2>
-            <li class="footer__column-links">
-              <ul class="footer__column-item">
-                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
-              </ul>
-              <ul class="footer__column-item">
-                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
-              </ul>
-              <ul class="footer__column-item">
-                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
-              </ul>
             </li>
+            <li class="footer__column-item">
+              <a class="footer__column-link" href="#">Концепция</a>
+            </li>
+            <li class="footer__column-item">
+              <a class="footer__column-link" href="#">Наставники</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <ul class="footer__column-links">
+              <li class="footer__column-item">
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Facebook" src="images/facebook_color_white.svg">Facebook</a>
+              </li>
+              <li class="footer__column-item">
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Vk" src="images/vk_color_white.svg">Вконтакте</a>
+              </li>
+              <li class="footer__column-item">
+                <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Instagram" src="images/instagram_color_white.svg">Instagram</a>
+              </li>
+            </ul>
         </nav>
       </div>
     </footer>
