--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="720" height="405" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="720" height="405" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -132,8 +132,8 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>
-            <a class="khan__buy-link">Купить книгу &rarr;</a>
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги Салмана Хана Весь мир-школа">
+            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -189,12 +189,20 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логототип arzamas">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логототип N+1">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логототип strelka">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логототип ПОЛКА">
-        </div>
+        <ul class="resources__logo-zone">
+            <li class="resources__item">
+              <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логототип arzamas"></a>
+            </li>
+            <li class="resources__item">
+              <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логототип N+1"></a>
+            </li>
+            <li class="resources__item">
+              <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логототип strelka"></a>
+            </li>
+            <li class="resources__item">
+              <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логототип ПОЛКА"></a>
+            </li>
+        </ul>
       </section>
 
     </main>
